# tensorflow-cmake2

./: README.md
examples/ObjectDetecter/: CMakeLists.txt  ObjectDetecter.cc  ObjectDetecter.h  main.cc
